# unixcmd

./: CMakeLists.txt  android.cmake  conanfile.py  default.cmake  deployment.json  main.cpp
android/: deployment.json.in
android/android/: AndroidManifest.xml  build.gradle
android/android/res/values/: strings.xml
android/android/src/ru/crags/app/: QnActivity.java
conan/profiles/: android.profile  android_arm32.profile  android_arm64.profile  arm64-build.profile  ios.profile  x86_64-build.profile
ios/: Info.plist
qml/: main.qml
